--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pids
+*.pid
+*.seed
+*.pid.lock
+
 # Compiled output
 /dist
 /tmp
@@ -19,6 +30,7 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.gemini
 
 # Visual Studio Code
 .vscode/*
@@ -41,3 +53,9 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.test
